fix(DataGrid): design review horizontal scrolling (#2657)
* fix(DataGrid): design review horizontal scrolling

* fix(DataGrid): lint fix

* fix(DataGrid): lint fix

* fix(DataGrid): test failure fix

* fix(DataGrid): lint fix

* fix(DataGrid): lint fix

* fix(DataGrid): review fix

* fix(DataGrid): hide select all alignment

* fix(DataGrid): review fix

* fix(DataGrid): review fix

* chore(Datagrid): remove extra border

---------

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -35,6 +35,7 @@
         align-items: center;
         color: $text-01;
       }
+
       .#{$block-class}__head-select-all.#{$block-class}__checkbox-cell.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
         z-index: 1;
@@ -46,6 +47,7 @@
       align-items: center;
       padding-top: 0;
       padding-bottom: 0;
+
       &.#{$block-class}__cell--spacer {
         padding: 0;
       }
@@ -61,6 +63,7 @@
         align-items: center;
         padding-top: 0;
       }
+
       &.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
         left: 0;
@@ -146,6 +149,7 @@
     }
   }
 }
+
 .#{$block-class}__grid-container::-webkit-scrollbar-thumb {
   background-color: $text-03;
 }
@@ -154,6 +158,7 @@
   width: 6px;
   background-color: $ui-background;
 }
+
 .#{$block-class}__grid-container {
   display: block;
   width: 100%;
@@ -246,7 +251,9 @@
   td.#{$carbon-prefix}--table-column-checkbox,
   th.#{$carbon-prefix}--table-column-checkbox {
     /* stylelint-disable-next-line declaration-no-important */
-    padding-right: $spacing-06 !important;
+    width: $spacing-09 !important;
+    /* stylelint-disable-next-line declaration-no-important */
+    padding-right: $spacing-05 !important;
   }
 }
 
@@ -318,7 +325,8 @@
 }
 
 .#{$block-class}__head-hidden-select-all {
-  padding-right: $spacing-08;
+  padding-right: $spacing-09;
+
   &.#{$block-class}__select-all-sticky-left {
     position: sticky;
     z-index: 1;
@@ -358,6 +366,14 @@
   overflow: hidden;
   /* stylelint-disable-next-line declaration-no-important */
   width: 100% !important;
+}
+
+.#{$block-class}__sticky thead {
+  display: flex;
+
+  tr.#{$block-class}__sticky {
+    width: auto;
+  }
 }
 
 .#{block-class}__displayFlex {
@@ -417,6 +433,7 @@
 
 .#{$block-class}__carbon-row-expanded {
   position: relative;
+
   &.#{$block-class}__carbon-row-expanded-hover-active::before {
     position: absolute;
     z-index: 2;
@@ -451,6 +468,7 @@
     flex: 1 0 auto;
     align-items: flex-end;
   }
+
   .#{$carbon-prefix}--table-toolbar {
     background: transparent;
   }
@@ -525,6 +543,7 @@
   justify-content: center;
   padding: 0;
   margin: 0;
+
   .#{$carbon-prefix}--btn__icon {
     margin: 0;
   }
